<resources>
    <string name="app_name">Zirkapp</string>
    <string name="gcm_sender_id">323224512527</string>
    <string name="gcm_api_key">AIzaSyBu7IT1aUw9PzU_EfVbxNkCGj97oX-p--Y</string>
    <string name="facebook_app_id">2009083782565906</string>
    <string name="twitter_api_key">HKNgH8O9c7QSXTIOaWxuBvBEW</string>
    <string name="twitter_api_secret">5co4OWxU9F51rxJ1QJIoIMPrz2B0Pzh8hWauZPnWluEoGeGXbl</string>
    <string name="parse_api_id">VDJEJIMbyuOiis9bwBHmrOIc7XDUqYHQ0TMhA23c</string>
    <string name="parse_api_key">9EJKzvp4LhRdnLqfH6jkHPaWd58IVXaBKAWdeItE</string>
    <string name="sinch_prod_key">e4287600-6187-4659-90c8-da1bef616489</string>
    <string name="sinch_prod_secret">GGOGQzBGX0qHMyl4UrIrEQ==</string>
    <string name="sinch_prod_environment">clientapi.sinch.com</string>
    <string name="sinch_dev_key">308f3e50-dfb0-4855-9935-08b75028c06e</string>
    <string name="sinch_dev_secret">UQmDdJm8nkSBUFntG4GPYQ==</string>
    <string name="sinch_dev_environment">sandbox.sinch.com</string>
    <string name="action_settings">Settings</string>
    <string name="lblWelcome">Bienvenido</string>
    <string name="lblWelcomeMsg">Bienvenido, \"Hay cosas en la vida que solo existen si decides crearlas!\".</string>
    <string name="lblWelcomeMsg1">Comunicate con los que te rodean!</string>
    <string name="lblWelcomeMsg2">Dile a todos lo que está pasando cerca de ti!</string>
    <string name="lblWelcomeMsg3">Encuentra amigos donde quiera que vayas!</string>
    <string name="lblWelcomeLogin">Bienvenido, nos alegra que estes aqui!</string>
    <string name="lblLogin">Iniciar Sesion</string>
    <string name="lblSingUp">Registrarse</string>
    <string name="lblCreateCount">Crea tu cuenta Zirkapp</string>
    <string name="lblRecuPass">Recuperar Contraseña</string>
    <string name="lblPassword">Contraseña</string>
    <string name="lblPasswordConfirm">Confirmar contraseña</string>
    <string name="lblLoginZirkapp">Cuenta de Zirkapp</string>
    <string name="lblUser">Usuario</string>
    <string name="lblEmail">Correo electrónico</string>
    <string name="msgLoginError">Usuario y/o contraseña no válidos</string>
    <string name="msgLoginEmpty">Usuario y/o contraseña necesarios</string>
    <string name="msgSignUpEmailEmpty">tu correo es necesario</string>
    <string name="msgSignUpUserEmpty">El usuario es necesario</string>
    <string name="msgSignUpPassEmpty">La contraseña es necesaria</string>
    <string name="msgSignUpErrorEmpty">Por favor diligencia todos los datos</string>
    <string name="msgSignUpPassDif">Tus contraseñas no coinciden, verifica tus datos!</string>
    <string name="msgLoginPassInvalid">Tu contraseña debe tener mínimo 6 caracteres!</string>
    <string name="msgMailFailed">Cuenta de correo inválida</string>
    <string name="lblHome">Home</string>
    <string name="lblConfig">Configuracion</string>
    <string name="lblUpdate">Actualizar</string>
    <string name="lblCateg">Categorias</string>
    <string name="lblSearch">Buscar</string>
    <string name="lblFav1">Favoritos</string>
    <string name="lblOk">Aceptar</string>
    <string name="lblDelete">Eliminar</string>
    <string name="lblCancel">Cancelar</string>
    <string name="lblAbout">Acerca de...</string>
    <string name="lblSettingGPS">Config. GPS</string>
    <string name="lblSettingNetwork">Conectarse...</string>
    <string name="lblDistanceMin">Dist. Mínina</string>
    <string name="lblDinstaceMax">Dist. Máxima</string>
    <string name="lblAddZmess">Nuevo Zimess</string>
    <string name="lblNewZmess">Comienza tu zimess...</string>
    <string name="lblConversation">Conversación</string>
    <string name="lblHide">Ocultar</string>
    <string name="lblDenounce">Denunciar</string>
    <string name="lblSend">Enviar</string>
    <string name="lblConfigDistance">Distancia de Zimess</string>
    <string name="lblVisitas">Visitas</string>
    <string name="lblUsersOnline">Usuarios Online</string>
    <string name="lblComments">Comentarios</string>
    <string name="lblSave">Guardar</string>
    <string name="lblResponse">Respuestas</string>
    <string name="lblSearching">Buscando Zimess...</string>
    <string name="lblSearchingUsers">Buscando usuarios online...</string>
    <string name="lblStart">Empecemos...</string>
    <string name="lblZimessNoFound">No hay Zimess, empieza tu!</string>
    <string name="lblMyZimessNoFound">No has publicado Zimess... animate, empieza ya!</string>
    <string name="lblMyZimess">Mis Zimess</string>
    <string name="lblDetailZimess">Det. del Zimess</string>
    <string name="lblSearchingChats">Buscando conversaciones...</string>
    <string name="lblVersion">Versión</string>
    <string name="lblEstado">Tu estado</string>
    <string name="lblName">Nombres</string>
    <string name="lblCity">En que ciudad vives?</string>
    <string name="msgNoAmygos">No tienes amygos</string>
    <string name="msgYes">SI</string>
    <string name="msgNo">NO</string>
    <string name="msgSelectType">Seleccione el tipo de Publicación</string>
    <string name="msgGPSdisabled">GPS Apagado, ir al menú de configuración?</string>
    <string name="msgNetworkDisabled">No hay Internet, ir al menú de configuración?</string>
    <string name="msgProgressDialog">Cargando contenido</string>
    <string name="msgExitApp">Te vas?</string>
    <string name="msgDisconnet">Out, que le pasa al internet?</string>
    <string name="msgZimessSend">Zimess enviado exitosamente!</string>
    <string name="msgError">Ha ocurrido un error:</string>
    <string name="msgZimesFailed">Tu zimess no ha sido enviado...</string>
    <string name="msgDistanceInMeter">*Distancia en Metros</string>
    <string name="msgErrorGral">Ha ocurrido un error:</string>
    <string name="msgOutConexion">Out! parece que estas sin conexión, o algo pasa en la web!</string>
    <string name="msgNoLoadZimess">No hay zimess cerca a tu posición! Animate, empieza tu!</string>
    <string name="msgReply">Dile algo a</string>
    <string name="msgUserIgnorado">Usuario Ignorado</string>
    <string name="msgZimessDeleteOk">Zimess eliminado!</string>
    <string name="msgZimessDeleteFailed">No es posible borrar tu Zimess, intenta mas tarde.</string>
    <string name="msgDeleting">Eliminando, espere...</string>
    <string name="msgByeZimess">Despidete de tu Zimess...</string>
    <string name="msgByeComment">Despidete de este comentario...</string>
    <string name="msgMessageEmpty">Debes escribir algo!</string>
    <string name="msgLocationUnknown">Ubicación no disponible...</string>
    <string name="msgLocationUnknownTry">Ubicación no disponible, intenta mas tarde.</string>
    <string name="msgHelpAvatar">Mantén presionada la imagen para cambiarla!</string>
    <string name="msgSaving">Guardando, por favor espere...</string>
    <string name="msgLoading">Cargando, por favor espere...</string>
    <string name="msgProfiNameEmty">Tu nombre es necesario...</string>
    <string name="msgEmailInvalid">Escribe una dirección de correo válida</string>
    <string name="msgProfileUpdate">Tus datos han sido actualizados!</string>
    <string name="msgProfileUpdateError">Hay problemas al guardar tus datos, intenta luego!</string>
    <string name="msgLogoutOk">Tu sesión se ha cerrado, regresa pronto...</string>
    <string name="msgAbout">Acerca de...</string>
    <string name="msgCopyRights">© 2015 Zirkapp.</string>
    <string name="msgCopyRights2">All rights reserved.</string>
    <string name="mgsNewChat">Nuevo chat</string>
    <string name="mgsNotiNotFound">No tienes notificaciones</string>
    <string name="title_fragment_zimess">Zimess</string>
    <string name="title_fragment_notifications">Notificaciones</string>
    <string name="title_fragment_chat">Chat</string>
    <string name="title_activity_chat_history">Historial del Chat</string>
    <string name="title_activity_about">Acerca de...</string>
    <string name="action_bar_history">Historial</string>
    <string name="action_bar_sort_zimess">Ordenar...</string>
    <string name="action_delete_zimess">Eliminar Zimess</string>
    <string name="action_bar_my_zimess">Mis Zimess</string>
    <string name="action_bar_new_zimess">Nuevo Zimess</string>
    <string name="msgShareApp">Te invito a probar Zirkapp, la app que te comunica con los que te rodean, descargala ya:</string>
    <string name="urlPlayStore">https://play.google.com/store/apps/details?id=com.ecp.gsy.dcs.zirkapp</string>
    <string name="msgShareTo">Compartir usando...</string>
    <string name="msgZimessSending">Publicando Zimess...</string>
    <string name="msgNoLoginFacebook">No fue posible conectarse a Facebook.</string>
    <string name="msgNoLoginTwitter">No fue posible conectarse a Twitter.</string>
    <string name="msgHelpMenuDrawer">Edita tu perfil tocando la parte superior del menú, mira la cantidad de Zimess, Usuarios Online, y Notificaciones, Toca una de las opciones para navegar, tambien puedes ir a los Ajustes, Calificar y Compartir Zirkapp</string>
    <string name="msgHelpIconMenu">Despliega y oculta el menu lateral, usando el icono de tres lineas, tambien puedes hacerlo deslizando tu dedo hacia la derecha e izquierda.</string>
    <string name="titleHelpNavigation">Navegar en Zirkapp</string>
    <string name="msgHelpNewZimess">Un Zimess es público y pueden verlo los usuarios que estan cerca, crea nuevos Zimess usando el icono resaltado en la imagén. Tambien puedes ver todos tus Zimess entrando en el menú "Mis Zimess".</string>
    <string name="msgHelpUpdateZimess">Cuando estes viendo Zimess o en el Chat, sobre la pantalla, desliza tu debo hacia abajo para actualizar. Toca una foto para ir a el perfil de usuario, o cualquier parte del Zimess para ver sus detalles, y demás.</string>
    <string name="imgNameTransition">imgAvatar</string>
    <string name="msgMoreRecents">Mas Recientes</string>
    <string name="mgsMoreNear">Mas Cerca</string>
    <string name="msgInternetOff">No estas conectado a Internet</string>
    <string name="msgZimessNull">Problemas con el Zimess, intenta mas tarde!</string>
    <string name="msgCommentError">Error al enviar tu comentario, reintentalo!</string>
    <string name="msgGpsOff">Zirkapp no puede obtener tu ubicación, GPS off.</string>
    <string name="msgByeChat">Despidete del historial de este chat...</string>
    <string name="msgByeChat2">Despidete de la charla con</string>
    <string name="msgLockUser">Bloquear</string>
    <string name="lblOptions">Opciones...</string>
    <string name="msgDeleteChat">Borrar conversación</string>
    <string name="mgsLoging">Ingresando...</string>
    <string name="msgLogout2">Quieres cerrar sesión?</string>
    <string name="msgStarting">Iniciando servicios...</string>
    <string name="msgChatDeleteOk">Conversación borrada!</string>
    <string name="msgViewProfile">Ver perfil</string>
    <string name="msgAsnwer">Responder a este  usuario</string>
    <string name="lblBirthday">Fecha de Nacimiento</string>
    <string name="lblGenderM">Masculino</string>
    <string name="lblGenderF">Femenino</string>
    <string name="lblNext">Siguiente</string>
    <string name="lblBack">Atras</string>
    <string name="lblNavNotifi">Notificaciones</string>
    <string name="lblNavAjust">Ajustes</string>
    <string name="lblNavQuali">Calificar</string>
    <string name="lblNavShare">Compartir</string>
    <string name="lblUrlWebZirkapp">Visita <a href="http://www.zirkapp.com">www.zirkapp.com</a></string>
    <string name="lblUrlWebFacebook">Danos me gusta en <a href="https://www.facebook.com/zirkapp">www.facebook.com/zirkapp</a></string>
    <string name="lblUrlWebTwitter">Siguenos en <a href="https://twitter.com/zirkapp">www.twitter.com/zirkapp</a></string>
    <string name="action_bar_go_messages">Ir a Mensajes</string>
    <string name="lblNavHome">Inicio</string>
    <string name="lblNavMyAccount">Mi Cuenta</string>
</resources>