<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menugroup_fragments"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item_home"
            android:checked="true"
            android:icon="@drawable/ic_track_changes_white_24dp"
            android:title="@string/lblNavHome" />
        <item
            android:id="@+id/item_notifi"
            android:icon="@drawable/ic_notifications_white_24dp"
            android:title="@string/lblNavNotifi" />
    </group>

    <group
        android:id="@+id/menugroup_profile"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item_profile"
            android:icon="@drawable/ic_account_circle_white_24dp"
            android:title="@string/lblNavMyAccount" />
    </group>


    <group
        android:id="@+id/menugroup_opciones"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item_ajust"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/lblNavAjust" />
    </group>

    <group
        android:id="@+id/menugroup_share"
        android:checkableBehavior="single"
        android:menuCategory="alternative">
        <item
            android:id="@+id/item_quali"
            android:icon="@drawable/ic_stars_white_24dp"
            android:title="@string/lblNavQuali" />

        <item
            android:id="@+id/item_share"
            android:icon="@drawable/ic_share_white_24dp"
            android:title="@string/lblNavShare" />
    </group>

</menu>