<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_zirkapp"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_zirkapp_transparent" />


    <!--Version-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:text="@string/lblVersion"
            android:textColor="@color/text_primary_color" />

        <TextView
            android:id="@+id/lblVersionApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_primary_color" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msgCopyRights"
        android:textColor="@color/text_primary_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msgCopyRights2"
        android:textColor="@color/text_primary_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:padding="10dp"
        android:text="@string/lblUrlWebZirkapp"
        android:textColor="@color/text_primary_color"
        android:textColorLink="@color/text_primary_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:padding="8dp"
        android:text="@string/lblUrlWebFacebook"
        android:textColor="@color/text_primary_color"
        android:textColorLink="@color/text_primary_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:padding="8dp"
        android:text="@string/lblUrlWebTwitter"
        android:textColor="@color/text_primary_color"
        android:textColorLink="@color/text_primary_color" />

</LinearLayout>