<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ecp.gsy.dcs.zirkapp.app.fragments.loginSignup.SignupFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/default_primary_color">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lblCreateCount"
            android:textStyle="italic"
            android:typeface="sans"
            android:gravity="center_vertical|center_horizontal"
            android:padding="16dp"
            android:textColor="@color/text_primary_color" />
    </LinearLayout>

    <!--Login-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center">

            <!--<TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblLoginZirkapp"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:textColor="@color/accent_color"
                android:gravity="center_vertical|center_horizontal" />-->

            <EditText
                android:id="@+id/txtUserEmail"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="textEmailAddress"
                android:hint="@string/lblEmail"
                android:imeOptions="actionNext" />

            <EditText
                android:id="@+id/txtUserSignUp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/lblUser"
                android:inputType="textVisiblePassword|textNoSuggestions"
                android:imeOptions="actionNext" />

            <EditText
                android:id="@+id/txtPassSignUp1"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/lblPassword"
                android:imeOptions="actionNext" />

            <EditText
                android:id="@+id/txtPassSignUp2"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/lblPasswordConfirm"
                android:imeOptions="actionNext" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.gc.materialdesign.views.ButtonRectangle
                    android:id="@+id/btnSingUp"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:text="@string/lblSingUp"
                    android:imeOptions="actionSend"
                    android:background="@color/default_primary_color" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
