<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/very_dark_gray"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:padding="12dp"
            android:text="Hola, completa o actualiza los datos de tu perfil, no olvides tu genero..."
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_primary_color"
            android:textSize="14dp"
            android:textStyle="italic"
            android:typeface="sans" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txtUsername"
                    style="@style/custom_edit_text_disable"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/lblUser" />

                <EditText
                    android:id="@+id/txtUserEmail"
                    style="@style/custom_edit_text"
                    android:hint="@string/lblEmail"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/txtUserNombres"
                    style="@style/custom_edit_text"
                    android:focusable="true"
                    android:hint="@string/lblName"
                    android:imeOptions="actionNext" />

                <EditText
                    android:id="@+id/txtUserBirthday"
                    style="@style/custom_edit_text"
                    android:editable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/lblBirthday"
                    android:inputType="date" />

                <RadioGroup
                    android:id="@+id/radioG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbtnMasculino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginRight="10dp"
                        android:checked="true"
                        android:text="@string/lblGenderM"
                        android:textColor="@color/accent_color"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/rbtnFemenino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/lblGenderF"
                        android:textColor="@color/accent_color"
                        android:textSize="14sp" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:text="@string/lblNext" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>