<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/default_primary_color"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:padding="16dp"
            android:text="Ahora sube tu foto de perfil, y si quieres, una frase que te identifique!"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_primary_color"
            android:textStyle="italic"
            android:typeface="sans" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:minHeight="200dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgUserAvatar"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_user_male" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/msgHelpAvatar"
                    android:textColor="@color/secondary_text_color" />

                <EditText
                    android:id="@+id/txtUserEstado"
                    style="@style/custom_edit_text"
                    android:hint="@string/lblEstado"
                    android:imeOptions="actionNext"
                    android:minLines="2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:text="@string/lblBack" />

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:text="@string/lblNext" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>